# pulsewatch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/instructions/: clean-architecture.instructions.md  coding-style-python.instructions.md  security-and-owasp.instructions.md
.github/prompts/: django-setup.prompt.md
.github/workflows/: README.md  ci.yml
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  tasks-template.md
apps/: __init__.py
core/: __init__.py  exceptions.py
core/health/: __init__.py  checks.py  urls.py  views.py
core/middleware/: __init__.py  logging.py  metrics.py
core/settings/: base.py  dev.py  prod.py  test.py
core/utils/: __init__.py  validators.py
docker/: TESTING.md  entrypoint.sh  test-docker-setup.sh
docs/: PROJECT-STATUS.md  architecture.md  ci-quick-reference.md  cicd-summary.md  pre-commit-optimization-summary.md  pre-commit-performance.md  quickstart.md
pulsewatch/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
requirements/: base.txt  dev.txt  prod.txt
shared/: __init__.py  base_models.py
specs/001-project-bootstrap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-project-bootstrap/checklists/: requirements.md
specs/001-project-bootstrap/contracts/: health.yaml  metrics.yaml
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_health_api.py
tests/integration/: __init__.py  test_database_connectivity.py  test_health.py
tests/unit/: __init__.py
